# easyrpg-tools

./: .gitignore  Makefile.am  bootstrap  configure.ac
encdetect/: AUTHORS  COPYING  Makefile.am  README.md  configure.ac
encdetect/src/: main.cpp
go-ncache/: Makefile  go.mod  go.sum  main.go
